--- a/hc/en/templating.html
+++ b/hc/en/templating.html
@@ -507,7 +507,7 @@ function serendipity_plugin_api_event_hook($event, &amp;$bag, &amp;$eventData, $
             break;
     }
 }
-?&gt;</code></pre>
+?&gt;</code></pre><br>
 
 <h5 id="docs-theme-options">Theme Options</h5>
 
@@ -562,7 +562,7 @@ function serendipity_plugin_api_event_hook($event, &amp;$bag, &amp;$eventData, $
         'desc'          =&gt; array('The first option', 'The second Option', 'The Third Option');
         'per_row'       =&gt; 1
     )
-);</code></pre>
+);</code></pre><br>
 
 <h5 id="docs-configuration-keys">Configuration keys</h5>
 
@@ -675,7 +675,7 @@ serendipity_loadGlobalThemeOptions($template_config, $template_loaded_config, $t
     'name'          =&gt; 'Which sidebars to use?',
     'type'          =&gt; 'string',
     'default'       =&gt; 'left,right,hidden'
-)</code></pre>
+)</code></pre><br>
 
 <h4 id="docs-specific-frontend-theme-files-and-their-meaning">Specific FRONTEND theme files and their meaning</h4>
 
