--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -1404,7 +1404,7 @@
             <dd class="plugin_maintainers">Serendipity Team</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
         </dl>
-        <p class="plugin_description">Allow users to e-mail a blog entry to a friend. Pay attention that this plugin can cause automatted traffic if bots are submitting your forms.</p>
+        <p class="plugin_description">Allow users to e-mail a blog entry to a friend. Pay attention that this plugin can cause automated traffic if bots are submitting your forms.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_mailentry.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_mailentry">GitHub</a></li>
