--- a/plugins/inc/bygroups_event_en.htm
+++ b/plugins/inc/bygroups_event_en.htm
@@ -439,14 +439,15 @@
         <h4 class="plugin_summary">Rules for publishing</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_entrycheck</dt>
-            <dd class="plugin_version">Version 1.18 (GPL, Last Updated 2017-01-03)</dd>
-            <dd class="plugin_maintainers">Garvin Hicking, Gregor Voeltz</dd>
+            <dd class="plugin_version">Version 1.19 (GPL, Last Updated 2018-02-12)</dd>
+            <dd class="plugin_maintainers">Garvin Hicking, Gregor Voeltz, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
         <p class="plugin_description">Applies some checks before an entry is published.</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_entrycheck.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_entrycheck">GitHub</a></li>
+            <li class="plugin_changelog"><a href="https://raw.githubusercontent.com/ophian/additional_plugins/master/serendipity_event_entrycheck/ChangeLog">ChangeLog</a></li>
         </ul>
     </div>
 
@@ -986,7 +987,7 @@
             <dd class="plugin_maintainers">Florian Anderiasch</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 0.8</dd>
         </dl>
-        <p class="plugin_description">Shows a random description in the header. (Separate database table has currently to be maintained manually)</p>
+        <p class="plugin_description">Shows a random description in the header. (Seperate database table has currently to be maintained manually)</p>
         <ul class="plugin_actions">
             <li class="plugin_download"><a href="#additional_plugins/serendipity_event_randomblogdescription.zip">Download</a></li>
             <li class="plugin_github"><a href="https://github.com/ophian/additional_plugins/tree/master/serendipity_event_randomblogdescription">GitHub</a></li>
@@ -1482,7 +1483,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2017-06-25)</dd>
+            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2018-02-12)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1837,7 +1838,7 @@
         <h4 class="plugin_summary">Post via XML-RPC</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_xmlrpc</dt>
-            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2017-06-25)</dd>
+            <dd class="plugin_version">Version 1.71 (GPL, Last Updated 2018-02-12)</dd>
             <dd class="plugin_maintainers">Serendipity Team, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -1869,7 +1870,7 @@
         <h4 class="plugin_summary">RSS Aggregator</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_event_aggregator</dt>
-            <dd class="plugin_version">Version 0.44 (GPL (MagpieRSS) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2017-07-22)</dd>
+            <dd class="plugin_version">Version 0.44 (GPL (MagpieRSS) or BSD (Onyx) or BSD-3 (SimplePie), Last Updated 2018-02-05)</dd>
             <dd class="plugin_maintainers">Evan Nemerson, Garvin Hicking, Kristian Koehntopp, Thomas Schulz, Claus Schmidt, Ian</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.7</dd>
         </dl>
