--- a/plugins/inc/bygroups_sidebar_en.htm
+++ b/plugins/inc/bygroups_sidebar_en.htm
@@ -1,4 +1,4 @@
-<section id="sbgroup_BACKEND_USERMANAGEMENT" class="spartacus-group">
+<section id="group_BACKEND_USERMANAGEMENT" class="spartacus-group">
     <h3>Backend: Usermanagement</h3>
     <div class="plugin">
         <h4 class="plugin_summary">User Self-Registration</h4>
@@ -17,7 +17,7 @@
     </div>
 
 </section>
-<section id="sbgroup_FRONTEND_ENTRY_RELATED" class="spartacus-group">
+<section id="group_FRONTEND_ENTRY_RELATED" class="spartacus-group">
     <h3>Frontend: Entry Related</h3>
     <div class="plugin">
         <h4 class="plugin_summary">Show tagged entries</h4>
@@ -36,7 +36,7 @@
     </div>
 
 </section>
-<section id="sbgroup_FRONTEND_EXTERNAL_SERVICES" class="spartacus-group">
+<section id="group_FRONTEND_EXTERNAL_SERVICES" class="spartacus-group">
     <h3>Frontend: External Services</h3>
     <div class="plugin">
         <h4 class="plugin_summary">Amazon Recommendations</h4>
@@ -287,7 +287,7 @@
     </div>
 
 </section>
-<section id="sbgroup_FRONTEND_FEATURES" class="spartacus-group">
+<section id="group_FRONTEND_FEATURES" class="spartacus-group">
     <h3>Frontend: Features</h3>
     <div class="plugin">
         <h4 class="plugin_summary">Authors login</h4>
@@ -414,7 +414,7 @@
     </div>
 
 </section>
-<section id="sbgroup_FRONTEND_VIEWS" class="spartacus-group">
+<section id="group_FRONTEND_VIEWS" class="spartacus-group">
     <h3>Frontend: Views</h3>
     <div class="plugin">
         <h4 class="plugin_summary">AdSense</h4>
@@ -547,7 +547,7 @@
         <h4 class="plugin_summary">Serendipity Authors</h4>
         <dl class="plugin_meta">
             <dt class="plugin_name">serendipity_plugin_userprofiles</dt>
-            <dd class="plugin_version">Version 1.2.2 (GPL, Last Updated 2016-09-19)</dd>
+            <dd class="plugin_version">Version 1.2.2 (GPL, Last Updated 2018-01-24)</dd>
             <dd class="plugin_maintainers">Falk Doering</dd>
             <dd class="plugin_requirements">Serendipity &gt;= 1.6</dd>
         </dl>
@@ -642,7 +642,7 @@
     </div>
 
 </section>
-<section id="sbgroup_IMAGES" class="spartacus-group">
+<section id="group_IMAGES" class="spartacus-group">
     <h3>Images</h3>
     <div class="plugin">
         <h4 class="plugin_summary">Coppermine Thumbnails</h4>
@@ -707,7 +707,7 @@
     </div>
 
 </section>
-<section id="sbgroup_STATISTICS" class="spartacus-group">
+<section id="group_STATISTICS" class="spartacus-group">
     <h3>Statistics</h3>
     <div class="plugin">
         <h4 class="plugin_summary">Average Rating</h4>
