--- a/themes/inc/themes_content.htm
+++ b/themes/inc/themes_content.htm
@@ -740,7 +740,7 @@
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/idea/preview.webp">
-            <img src="/i/t/idea/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="Idea">
+            <img src="/i/t/idea/preview.png" title="CSS complete theme only. Simple example theme from 2004 using all the template files from the old default fallback (Serendipity 2.3) theme. Styled by CSS only." alt="Idea">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2020-04-17</dd>
@@ -1451,7 +1451,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-rtl/preview.webp">
-            <img src="/i/t/default-rtl/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="RTL-Languages">
+            <img src="/i/t/default-rtl/preview.png" title="Language dependent Right-To-Left written RTL-Theme [still needs some love!] as v0.4 Simple example theme from 2006 in right-to-left oriented manner, depending on the old styled default (Serendipity 2.3) theme." alt="RTL-Languages">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2020-04-18</dd>
@@ -1810,7 +1810,7 @@ Without any theme engine set, all template files are taken from default theme. F
     <dt class="theme_name">
         <picture>
             <source type="image/webp" srcset="/i/t/default-xml/preview.webp">
-            <img src="/i/t/default-xml/preview.png" title="THEME_INFO_SUMMARY (text in lang_info_en.inc.php pattern) THEME_INFO_DESC (and LANG_CHARSET depending language files)" alt="XML Engine (Dev)">
+            <img src="/i/t/default-xml/preview.png" title="Raw XML output XML-Template theme for the Serendipity Styx Blog system Simple theme from 2006, newly refurbished to work with Serendipity Styx Edition. This theme outputs raw XML on the frontside, to make the content readable by XML-Readers. It does still effect some minor plugin integrations on the backend side, like linktrimmer or amazonchooser, and is more or less meant to be used in a non-too-much-extended core release blog, though it does works with some well known plugin apps, like staticpages, freetags etc." alt="XML Engine (Dev)">
         </picture>
     </dt>
     <dd class="theme_version">Version 1.0 (BSD license), 2018-09-05</dd>
